...

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
...

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
                android:layout_marginTop="32dp"
                android:paddingTop="32dp"
                android:text="Meal Planner"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mp_week_of_mealplan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

                <Button
                    android:id="@+id/calendar_previous"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
...

                <Button
                    android:id="@+id/calendar_next"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
...

            <TextView
                android:id="@+id/mp_day_of_week_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/avenir_black"
                android:text="Day of Week"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/week_tab"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
...

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="11dp"
                    android:text="Meal of Day"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/mp_help_button"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="packed"
...

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/meal_tab"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
...

                <LinearLayout
                    android:id="@+id/mp_table_linear_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/mp_edit_buttons">

                    <TextView
                        android:id="@+id/mp_items_title"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
...

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/mp_add_item"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
...

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/mp_create_function_buttons"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
...
                    android:textColor="@color/white"
                    android:backgroundTint="@color/salmon"
                    app:layout_constraintBaseline_toBaselineOf="@+id/mp_cancel"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
...
