...
    <string name="delete">Delete</string>
    <string name="cancel">cancel</string>
    <string name="select_one">Select One</string>

    <!-- LoginScreen -->

    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="forgot_password_prompt"><u>Forgot your password?</u></string>
    <string name="ingredient_storage">Ingredient Storage</string>
    <string name="recipes">Recipes</string>
    <string name="shopping_list">Shopping List</string>
    <string name="meal_plan">Meal Plan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Meal Plan -->
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="your_mealplans">Your Meal Plans</string>
    <string name="add_mealplan">Make a new mealplan</string>
    <string name="edit_mealplan">Edit an existing meal plan</string>
    <string name="delete_mealplan">Delete an existing meal plan</string>
    <string name="view_mealplan">View all meal plans</string>
    <string name="meal_prompt">Your meals for</string>
    <string name="today">today</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="clear">clear</string>
    <string name="selection">Selection</string>
    <string name="mealplan_week">Week of Meal Plan</string>
    <string name="day_view">View meals by day</string>
    <string name="meal_plan_description">You can build a meal plan using either your stored ingredients or stored recipes. You can choose any number of ingredients or recipes; a meal plan will be curated based on your selections.</string>

    <!-- Shopping List -->
    <string name="sort_by">Sort By:</string>
    <string name="filter">Filter:</string>
...
