...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".mealplan.SelectMealsActivity">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/avenir_black_oblique"
        android:text="@string/selection"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/mp_items_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:backgroundTint="@color/salmon"
        android:text="@android:string/cancel"
        android:fontFamily="@font/avenir_black"
        android:textColor="@color/divider_color"
        app:layout_constraintBaseline_toBaselineOf="@+id/mp_items_save"
        app:layout_constraintEnd_toStartOf="@+id/mp_items_save"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/mp_items_save"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/mp_items_cancel" />

    <RadioGroup
        android:id="@+id/mp_type_of_item"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:checkedButton="@id/ingredient_radio"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11">

...
            tools:layout_conversion_absoluteHeight="48dp"
            tools:layout_conversion_absoluteWidth="109dp"
            tools:layout_editor_absoluteX="32dp"
            tools:layout_editor_absoluteY="107dp" />

        <RadioButton
            android:id="@+id/recipe_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:fontFamily="@font/avenir_book"
            android:text="@string/recipes"
            tools:layout_conversion_absoluteHeight="48dp"
...
            tools:layout_editor_absoluteX="32dp"
            tools:layout_editor_absoluteY="107dp" />

    </RadioGroup>

    <ListView
        android:id="@+id/meal_plan_item_list"
        android:layout_width="0dp"
        android:layout_height="400dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
...
